# twenty-four

./: Cargo.toml  README.md
src/: lib.rs  main.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
web/: index.html  package.json  pnpm-lock.yaml
web/src/: App.tsx
web/wasm24/: package.json  wasm24.d.ts  wasm24.js  wasm24_bg.js  wasm24_bg.wasm  wasm24_bg.wasm.d.ts
