[package]
name = "wasm24"
version = "0.7.0"
authors = []
license = "Apache-2.0/MIT"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
twenty-four = { path = "../" }

[dependencies.wasm-bindgen]
version = "0.2.80"
